--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,43 +1,59 @@
 [build-system]
-# Standard way to tell Python how to build this package (even if you don't intend to publish it)
 requires = ["setuptools>=61.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-# Basic project metadata
 name = "PhotoSynth"
 version = "0.1.0"
-description = "Distributed pipeline for NAS photo and video tagging using VLM and SAM."
+description = "Distributed pipeline for NAS photo and video tagging using SAM 3, Grounding DINO, and Llama 3.2 Vision."
 readme = "README.md"
 authors = [
-    { name = "Aditya Das", email = "aditya.das@example.com" } # Replace with your preferred contact info
+    { name = "Aditya Das", email = "aditya.das8.ad@gmail.com" }
 ]
-license = { text = "Apache-2.0" } # As agreed upon
+license = { text = "Apache-2.0" }
+requires-python = ">=3.11"
 
-# Classifiers help categorize your project (optional but good practice)
-classifiers = [
-    "Programming Language :: Python :: 3.11",
-    "Framework :: Celery",
-    "Topic :: Scientific/Engineering :: Artificial Intelligence"
-]
-
-# This is where you declare your runtime dependencies
 dependencies = [
-    # Core Celery/Queue Backbone
-    "celery[redis]",
-    "pydantic",
-    "PyYAML",
+    # --- Core Infrastructure ---
+    "celery[redis]>=5.5.0",
+    "redis>=5.2.0",
+    "pydantic>=2.10.0",
+    "PyYAML>=6.0.0",
+    "watchdog>=6.0.0",
+    "python-dotenv>=1.0.0",
 
-    # File Watcher
-    "watchdog",
+    # --- Image & File Handling ---
+    "Pillow>=11.0.0",
+    "numpy>=2.0.0",
+    "opencv-python>=4.10.0",
+    "pyexiftool>=0.5.0",
 
-    # ExifTool Interface (Needed on the commit worker)
-    "pyexiftool",
+    # --- Machine Learning Frameworks ---
+    "torch>=2.5.0",
+    "torchvision>=0.20.0",
+    "torchaudio>=2.5.0",
 
-    # Placeholder for ML framework, will be installed later
-     "torch>=2.0.0",
-     "transformers",
-     "torchvision",                # Required for image loading/pre-processing
-     "numpy",                      # Essential for array manipulation
-     "Pillow",                     # Standard image library (for opening image files)
+    # --- Transformers & VLMs (Hugging Face) ---
+    "transformers>=4.48.0",  # Needed for Llama 3.2 Vision & Grounding DINO
+    "accelerate>=1.0.0",
+    "bitsandbytes>=0.45.0",  # Crucial for 4-bit quantization on 3090
+
+    # --- Specific Model Libraries ---
+    # SAM 3 (Meta's latest - usually requires specific repo or upgraded transformers)
+    "timm>=1.0.0",
+    "segment-anything-2",    # Placeholder: SAM 3 often installs via git, see instructions below
+
+    # PaddleOCR (Use the new VL version for 2025)
+    "paddlepaddle-gpu>=3.0.0",
+    "paddleocr>=2.9.0",
+
+    # Face Analysis
+    "insightface>=0.7.3",    # Best for RetinaFace + ArcFace
+    "onnxruntime-gpu>=1.20.0" # Backend for InsightFace
 ]
+
+[tool.uv]
+# Use this to pin specific git dependencies if they aren't on PyPI yet (common for new SAM versions)
+# dependencies = [
+#    "segment-anything-3 @ git+https://github.com/facebookresearch/segment-anything-3.git"
+# ]
