--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ dependencies = [
     "numpy<2.0.0",
     "opencv-python>=4.10.0",
     "pyexiftool>=0.5.0",
+    "imagehash>=4.3.1",
 
     # --- Machine Learning Frameworks ---
     "torch>=2.5.0",
