--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ dependencies = [
     "watchdog>=6.0.0",
     "python-dotenv>=1.0.0",
     "huggingface_hub>=0.26.0",
+    "fastapi>=0.104.0",
+    "uvicorn>=0.24.0",
 
     # --- Image & File Handling ---
     "Pillow>=11.0.0",
