--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,12 +5,11 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "PhotoSynth"
 version = "0.1.0"
-description = "Distributed pipeline for NAS photo tagging using SAM 3, Grounding DINO, and Llama 3.2 Vision."
+description = "Distributed pipeline for NAS photo tagging."
 readme = "README.md"
 authors = [
     { name = "Aditya Das", email = "aditya.das8.ad@gmail.com" }
 ]
-# FIX 1: Use simple string for license (SPDX identifier)
 license = "Apache-2.0"
 requires-python = ">=3.11, <3.12"
 
@@ -34,6 +33,7 @@ dependencies = [
     "imagehash>=4.3.1",
 
     # --- Machine Learning Frameworks ---
+    # Unpinned is safer for 5090 so it can grab Nightly if needed
     "torch>=2.5.0",
     "torchvision>=0.20.0",
 
@@ -41,9 +41,13 @@ dependencies = [
     "transformers>=4.46.0",
     "accelerate>=1.0.0",
     "bitsandbytes>=0.44.0 ; sys_platform == 'linux'",
+    
+    # --- Required for Florence-2 ---
+    "einops>=0.8.0",
+    "timm>=1.0.0",
+    # REMOVED: "flash-attn" (Incompatible with CUDA 13)
 
     # --- Model Specifics ---
-    "timm>=1.0.0",
     "paddlepaddle-gpu==2.6.1 ; sys_platform == 'linux'",
     "paddleocr>=2.9.0",
 
@@ -55,6 +59,7 @@ dependencies = [
     "qwen-vl-utils>=0.0.4",
 ]
 
-# FIX 2: Explicitly tell setuptools which directory is the package
 [tool.setuptools]
 packages = ["photosynth"]
+
+# REMOVED: [tool.uv.extra-build-dependencies] section
