--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "PhotoSynth"
 version = "0.1.0"
-description = "Distributed pipeline for NAS photo tagging."
+description = "Distributed pipeline for NAS photo tagging using YOLO-World, InsightFace, and Llama 3.2 Vision."
 readme = "README.md"
 authors = [
     { name = "Aditya Das", email = "aditya.das8.ad@gmail.com" }
@@ -33,33 +33,24 @@ dependencies = [
     "imagehash>=4.3.1",
 
     # --- Machine Learning Frameworks ---
-    # Unpinned is safer for 5090 so it can grab Nightly if needed
     "torch>=2.5.0",
     "torchvision>=0.20.0",
 
-    # --- Transformers & VLMs ---
+    # --- Transformers & VLMs (Llama 3.2) ---
     "transformers>=4.46.0",
     "accelerate>=1.0.0",
     "bitsandbytes>=0.44.0 ; sys_platform == 'linux'",
     
-    # --- Required for Florence-2 ---
-    "einops>=0.8.0",
-    "timm>=1.0.0",
-    # REMOVED: "flash-attn" (Incompatible with CUDA 13)
-
-    # --- Model Specifics ---
-    "paddlepaddle-gpu==2.6.1 ; sys_platform == 'linux'",
-    "paddleocr>=2.9.0",
+    # --- NEW: The Stable Detector ---
+    "ultralytics>=8.2.0",
 
     # --- Face Analysis ---
     "insightface>=0.7.3",
     "onnxruntime-gpu>=1.19.0 ; sys_platform == 'linux'",
 
-    # Qwen2-VL Specifics
+    # --- Utilities ---
     "qwen-vl-utils>=0.0.4",
 ]
 
 [tool.setuptools]
 packages = ["photosynth"]
-
-# REMOVED: [tool.uv.extra-build-dependencies] section
