--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ dependencies = [
     # --- Image & File Handling ---
     "Pillow>=11.0.0",
     "numpy<2.0.0",
-    "opencv-python>=4.10.0",
+"opencv-python-headless>=4.10.0",
     "pyexiftool>=0.5.0",
     "imagehash>=4.3.1",
 
