--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,18 +36,19 @@ dependencies = [
     "torch>=2.5.0",
     "torchvision>=0.20.0",
 
-    # --- Transformers & VLMs (Llama 3.2) ---
+    # --- Transformers & VLMs ---
     "transformers>=4.46.0",
     "accelerate>=1.0.0",
     "bitsandbytes>=0.44.0 ; sys_platform == 'linux'",
     
-    # --- NEW: The Stable Detector ---
+    # --- Object Detection ---
     "ultralytics>=8.2.0",
+    "clip @ git+https://github.com/openai/CLIP.git",
 
-"clip @ git+https://github.com/openai/CLIP.git",
-    # --- Face Analysis ---
+    # --- Face Analysis & Clustering ---
     "insightface>=0.7.3",
     "onnxruntime-gpu>=1.19.0 ; sys_platform == 'linux'",
+    "scikit-learn>=1.3.0", # <--- NEW: Required for Clustering (DBSCAN)
 
     # --- Utilities ---
     "qwen-vl-utils>=0.0.4",
