--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,34 +24,29 @@ dependencies = [
     "huggingface_hub>=0.26.0",
     "fastapi>=0.104.0",
     "uvicorn>=0.24.0",
-
     # --- Image & File Handling ---
     "Pillow>=11.0.0",
     "numpy<2.0.0",
     "opencv-python-headless>=4.10.0",
     "pyexiftool>=0.5.0",
     "imagehash>=4.3.1",
-
     # --- Machine Learning Frameworks ---
     "torch>=2.5.0",
     "torchvision>=0.20.0",
-
     # --- Transformers & VLMs ---
     "transformers>=4.46.0",
     "accelerate>=1.0.0",
     "bitsandbytes>=0.44.0 ; sys_platform == 'linux'",
-    
     # --- Object Detection ---
     "ultralytics>=8.2.0",
     "clip @ git+https://github.com/openai/CLIP.git",
-
     # --- Face Analysis & Clustering ---
     "insightface>=0.7.3",
     "onnxruntime-gpu>=1.19.0 ; sys_platform == 'linux'",
     "scikit-learn>=1.3.0", # <--- NEW: Required for Clustering (DBSCAN)
-
     # --- Utilities ---
     "qwen-vl-utils>=0.0.4",
+    "rich>=14.2.0",
 ]
 
 [tool.setuptools]
