--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,11 @@ pyexiftool==0.2.0     # Python wrapper for ExifTool
 # Infrastructure
 celery[redis]==5.3.6  # Distributed Task Queue
 redis==5.0.1          # Broker/Backend
+psycopg2-binary>=2.9.11 # PostgreSQL adapter (For db.py changes)
+# --- NEW/UPDATED ---
+scikit-learn>=1.3.0   # Required for face clustering (DBSCAN)
+celery-exporter==0.1.0 # Optional tool for Prometheus/Grafana monitoring, but helpful for progress
+# -------------------
 
 # Image Processing
 Pillow>=11.0.0        # Image processing
