--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,8 @@ redis==5.0.1          # Broker/Backend
 psycopg2-binary>=2.9.11 # PostgreSQL adapter (For db.py changes)
 # --- NEW/UPDATED ---
 scikit-learn>=1.3.0   # Required for face clustering (DBSCAN)
-celery-exporter==0.1.0 # Optional tool for Prometheus/Grafana monitoring, but helpful for progress
+flower>=2.0.0         # Web based tool for monitoring Celery (UI)
+pillow-heif>=0.14.0   # Support for .heic and .heif image files
 # -------------------
 
 # Image Processing
